--- a/competra-frontend/src/index.css
+++ b/competra-frontend/src/index.css
@@ -1,68 +1,90 @@
+@font-face {
+	font-family: 'Aldrich';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/aldrich/v21/MCoTzAn-1s3IGyJMVacY3w.woff2)
+		format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+		U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/*--placeholder-color: #b0b0b0;*/
+/*
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --background-color: #ffffff;
+  --text-color: #000000;
+  
+  --primary-background-color: #11252d;
+  --secondary-background-color: #f2fbfd;
+  --header-text-color: #030d11;
+  --container-background-color: #e1eef1;
+  --modal-text-color: #fafafa;
+  --button-color: #31d9e6;
+  scrollbar-width: thin;
+  scrollbar-color: var(--highlight-color) var(--secondary-background-color);
+}
+*/
+:root {
+	/* --background-color: #ffffff;
+	--text-color: #1f2a38;
+	--primary-background-color: #d4ebf9;
+	--secondary-background-color: #f2f9fc;
+	--header-text-color: #0a3a5d;
+	--container-background-color: #f7fcff;
+	--modal-text-color: #1f2a38;
+	--button-color: #31d9e6;
+	--button-hover-color: #1fa2b3; */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	--background-color: #11252d;
+	--text-color: #ffffff;
+	--primary-background-color: #030d11;
+	--secondary-background-color: #061b23;
+	--header-text-color: #ffffff;
+	--container-background-color: #535b65;
+	--modal-text-color: #ffffff;
+	--button-color: #31d9e6;
+	--button-hover-color: #1fa2b3;
+	scrollbar-width: thin;
+	scrollbar-color: var(--text-color) var(--secondary-background-color);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+[data-theme='christmas'] {
+	--background-color: #d32f2f;
+	--text-color: #000000;
+	--primary-background-color: #388e3c;
+	--secondary-background-color: #ffffff;
+	--header-text-color: #ffffff;
+	--container-background-color: #d32f2f;
+	--modal-text-color: #000000;
+	--button-color: #fbc02d;
+	scrollbar-width: thin;
+	scrollbar-color: var(--text-color) var(--primary-background-color);
 }
-a:hover {
-  color: #535bf2;
+
+[data-theme='dark'] {
+	--background-color: #11252d;
+	--text-color: #ffffff;
+	--primary-background-color: #030d11;
+	--secondary-background-color: #061b23;
+	--header-text-color: #ffffff;
+	--container-background-color: #535b65;
+	--modal-text-color: #ffffff;
+	--button-color: #31d9e6;
+	--button-hover-color: #1fa2b3;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	background-color: var(--background-color);
+	color: var(--text-color);
+	font-family: 'Aldrich', system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+	color-scheme: light dark;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	transition: background-color 1s, color 1s;
 }
