--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+	max-width: 1280px;
+	margin: 0 auto;
+	/*padding: 1rem;*/
+	text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.ReactModal__Body--open,
+.ReactModal__Html--open {
+	overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ReactModal__Overlay {
+	opacity: 0;
+	transition: opacity 250ms ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.ReactModal__Overlay--after-open {
+	opacity: 1;
 }
 
-.card {
-  padding: 2em;
+.ReactModal__Overlay--before-close {
+	opacity: 0;
 }
 
-.read-the-docs {
-  color: #888;
+.ReactModal__Content {
+	opacity: 0;
+	transform: scale(0.9);
+	transition: opacity 250ms ease-in-out, transform 250ms ease-in-out;
+}
+
+.ReactModal__Content--after-open {
+	opacity: 1;
+	transform: scale(1);
+}
+
+.ReactModal__Content--before-close {
+	opacity: 0;
+	transform: scale(0.9);
 }
