--- a/src/components/common/activityCards/style.css
+++ b/src/components/common/activityCards/style.css
@@ -45,6 +45,20 @@
 	background-color: var(--button-hover-color);
 }
 
+.leave-button {
+	background-color: var(--button-color-2);
+	color: white;
+	border: none;
+	border-radius: 4px;
+	padding: 5px 10px;
+	cursor: pointer;
+	transition: background-color 0.2s;
+}
+
+.leave-button:hover {
+	background-color: var(--button-color-2-hover);
+}
+
 .activity-card h4 {
 	margin: 10px 0 5px;
 	font-size: 1em;
